// =====================================================================
// Spendix DBML schema generated from prisma/schema.prisma (PostgreSQL)
// =====================================================================

// --------------------------
// Enums
// --------------------------
Enum PlanType {
  FREE
  PRO
  PREMIUM
}

Enum TransactionType {
  EXPENSE
  INCOME
}

Enum SubscriptionStatus {
  ACTIVE
  PAST_DUE
  CANCELED
  TRIALING
  ENDED
  ABANDONED
  INCOMPLETE
  UPCOMING
}

Enum RecurringInterval {
  DAILY
  WEEKLY
  MONTHLY
  YEARLY
}

Enum TransactionStatus {
  PENDING
  COMPLETED
  FAILED
}

Enum AccountType {
  CURRENT
  SAVING
}

Enum PaymentStatus {
  PAID
  FAILED
  PENDING
}

Enum PaymentType {
  CHECKOUT
  RECURRING
}

Enum ImportJobStatus {
  SCANNED
  SAVED
  FAILED
}

// --------------------------
// Tables
// --------------------------
Table users {
  id uuid [pk, note: 'Primary key (UUID)']
  clerk_user_id text [unique]
  email text [unique]
  first_name text
  last_name text
  image_url text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table usage {
  id uuid [pk]
  ai_receipt_scans int [default: 0]
  ai_bulk_imports int [default: 0]
  period_start timestamptz
  period_end timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  user_id uuid [unique]

  Indexes {
    user_id [unique]
  }
}

Table import_job {
  id text
  user_id uuid
  account_id uuid
  status ImportJobStatus [default: SCANNED]
  created_at timestamptz [default: `now()`]
  error_msg text
  usage_id uuid

  Indexes {
    (id, user_id) [pk]
  }
}

Table subscription {
  id text [pk]
  user_id uuid [unique]
  created_at timestamptz
  updated_at timestamptz

  Indexes {
    user_id
  }
}

Table subscription_item {
  id text [pk]
  user_id uuid
  subscription_id text
  plan_key text
  plan_type PlanType
  status SubscriptionStatus
  period_start timestamptz
  period_end timestamptz
  created_at timestamptz
  updated_at timestamptz

  Indexes {
    (user_id, subscription_id, status)
  }
}

Table payment {
  id text [pk]
  user_id uuid
  status PaymentStatus
  type PaymentType
  amount int
  created_at timestamptz

  Indexes {
    user_id
  }
}

Table budgets {
  id uuid [pk]
  amount numeric
  last_alert_sent timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  user_id uuid [unique]

  Indexes {
    user_id [unique]
  }
}

Table accounts {
  id uuid [pk]
  name text
  type AccountType
  balance numeric [default: 0]
  is_default boolean [default: false]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  user_id uuid

  Indexes {
    user_id
  }
}

Table transactions {
  id uuid [pk]
  type TransactionType
  amount numeric
  description text
  date timestamptz
  category text
  receipt_url text
  is_recurring boolean [default: false]
  recurring_interval RecurringInterval
  next_recurring_date timestamptz
  last_processed timestamptz
  status TransactionStatus [default: COMPLETED]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  user_id uuid
  account_id uuid

  Indexes {
    (user_id, account_id, date, amount, description) [unique]
  }
}

Table account_transaction_rag {
  id uuid [pk]
  user_id uuid
  account_id uuid
  content text
  embedding "vector(768)"
  created_at timestamptz [default: `now()`]

  Indexes {
    (user_id, account_id) [unique]
    (user_id, account_id)
  }
}

Table account_monthly_transaction_rag {
  id uuid [pk]
  user_id uuid
  account_id uuid
  summary_month timestamptz
  content text
  embedding "vector(768)"
  created_at timestamptz [default: `now()`]

  Indexes {
    (user_id, account_id, summary_month) [unique]
    (user_id, account_id, summary_month)
  }
}

// --------------------------
// Relationships
// --------------------------
Ref: usage.user_id > users.id [delete: cascade]
Ref: import_job.usage_id > usage.id [delete: cascade]
Ref: subscription.user_id > users.id [delete: cascade]
Ref: subscription_item.user_id > users.id [delete: cascade]
Ref: subscription_item.subscription_id > subscription.id [delete: cascade]
Ref: payment.user_id > users.id [delete: cascade]
Ref: budgets.user_id > users.id [delete: cascade]
Ref: accounts.user_id > users.id [delete: cascade]
Ref: transactions.user_id > users.id [delete: cascade]
Ref: transactions.account_id > accounts.id [delete: cascade]
Ref: account_transaction_rag.user_id > users.id [delete: cascade]
Ref: account_transaction_rag.account_id > accounts.id [delete: cascade]
Ref: account_monthly_transaction_rag.user_id > users.id [delete: cascade]
Ref: account_monthly_transaction_rag.account_id > accounts.id [delete: cascade]
// ==========================
// Enums
// ==========================

Enum RecurringInterval {
  DAILY
  WEEKLY
  MONTHLY
  YEARLY
}

Enum TransactionStatus {
  PENDING
  COMPLETED
  FAILED
}

Enum AccountType {
  CURRENT
  SAVING
}

Enum PlanType {
  FREE
  PRO
  PREMIUM
}

Enum SubscriptionStatus {
  ACTIVE
  TRIALING
  CANCELED
  EXPIRED
}

// ==========================
// Tables
// ==========================

Table users {
  id uuid [primary key]
  clerk_user_id varchar [unique]
  email varchar [unique]
  name varchar
  image_url varchar
  created_at timestamp
  updated_at timestamp
}

Table subscriptions {
  id uuid [primary key]
  user_id uuid [unique]
  plan PlanType
  status SubscriptionStatus
  provider varchar
  provider_sub_id varchar
  started_at timestamp
  trial_ends_at timestamp
  current_period_end timestamp
  created_at timestamp
  updated_at timestamp
}

Table usage {
  id uuid [primary key]
  user_id uuid [unique]
  ai_receipt_scans int
  ai_bulk_imports int
  period_start timestamp
  period_end timestamp
  created_at timestamp
  updated_at timestamp
}

Table budgets {
  id uuid [primary key]
  user_id uuid [unique]
  amount decimal
  last_alert_sent timestamp
  created_at timestamp
  updated_at timestamp
}

Table accounts {
  id uuid [primary key]
  user_id uuid
  name varchar
  type AccountType
  balance decimal
  is_default boolean
  created_at timestamp
  updated_at timestamp
}

Table transactions {
  id uuid [primary key]
  user_id uuid
  account_id uuid
  type varchar
  amount decimal
  description varchar
  date timestamp
  category varchar
  receipt_url varchar
  is_recurring boolean
  recurring_interval RecurringInterval
  next_recurring_date timestamp
  last_processed timestamp
  status TransactionStatus
  created_at timestamp
  updated_at timestamp
}

// ==========================
// Relationships
// ==========================

Ref: subscriptions.user_id > users.id
Ref: usage.user_id > users.id
Ref: budgets.user_id > users.id

Ref: accounts.user_id > users.id

Ref: transactions.user_id > users.id
Ref: transactions.account_id > accounts.id
